@@ -31,6 +31,7 @@ static const EnumMap<HOOK_TYPE> HooksLookupTable({
     { "action.location", HOOK_TYPE::ACTION_LOCATION },
     { "guest.generation", HOOK_TYPE::GUEST_GENERATION },
     { "vehicle.crash", HOOK_TYPE::VEHICLE_CRASH },
+    { "map.save", HOOK_TYPE::MAP_SAVE },
 });
 
 HOOK_TYPE OpenRCT2::Scripting::GetHookType(const std::string& name)
